# TalkToDoc

./: .gitignore  Readme.md  pyproject.toml
RAG/: __init__.py  rag.py
add_documents_to_webpage/: app.py
agent_store/: __init__.py  agents.py  helper_history.py
agent_store/assets/: supervisor_and_general_manager.md  testing__evaluation_judge.md
file_to_text/: __init__.py  convert_files.py
helper/: __init__.py  helper_history.py  helper_jina.py  helper_other_file_formats.py  helper_test.py
models/: __init__.py  history.py
qdrant_docustore/: __init__.py  embeddings.py  qdrant_persist_server.py
streamlit_webapps/: add_to_qdrant.py  rag_sample.py
test/: __init__.py  agent_test.py  conftest.py  helper_test.py  qdrant_test.py
test/assets/: audio.m4a
